manifests/spo-backend/kubernates/overlay/dev/patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spo-backend
spec:
  selector:
    matchLabels:
      app: spo-backend
  template:
    metadata:
      labels:
        app: spo-backend
    spec:
      containers:
        - name: primary
          resources:
            requests:
              cpu: 0.25
              memory: 256Mi
            limits:
              cpu: 0.5
              memory: 512Mi
