manifests/spo-backend/kubernates/overlay/dev/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spo-backend-ing
spec:
  rules:
    - host: api-spo-dev.pea.co.th
      $patch: replace
  tls:
    - hosts:
        - api-spo-dev.pea.co.th
